# auto-browser

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.codespaces.yml  docker-compose.yml  railway.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/adapters/: README.md  verifier_adapter.py
benchmarks/cuaverifier/: README.md  stage1-manifest.json
benchmarks/online_mind2web/: README.md  stage1-manifest.json
benchmarks/webarena/: README.md  run_stage0.py  stage0-manifest.json  stage0_contracts.py
browser-node/: Dockerfile  package-lock.json  package.json
client/: README.md  pyproject.toml
client/auto_browser_client/: __init__.py  mcp_bridge.py
client/tests/: test_mcp_bridge.py
controller/: pyproject.toml  requirements.txt
controller/app/: compliance.py  main.py  railway.toml  runtime_policy.py  webhooks.py
controller/app/browser/services/: sessions.py
controller/app/middleware/: http.py
controller/app/providers/: base.py
controller/app/routes/: extensions.py
controller/app/ui/: index.html
controller/tests/: test_compliance.py  test_dashboard_security.py  test_events_webhooks.py  test_main_auth.py  test_mcp_stdio.py  test_mesh_nonce_cache.py  test_metrics.py  test_provider_base.py  test_runtime_policy.py  test_session_summary_disconnected.py  test_stealth.py  test_verifier_adapter.py  test_webarena_stage0.py
docs/: architecture.md  good-first-issues.md  launch.md  mcp-clients.md  production-hardening.md
examples/: claude_desktop_config.json  cursor-mcp-setup.md
integrations/langchain/: pyproject.toml
packaging/auto-browser-mcp/: README.md  pyproject.toml
scripts/: extract_changelog.py
