[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-browser-client"
version = "1.1.2"
description = "Python client SDK for auto-browser"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["auto_browser_client*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
