[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-browser-client"
version = "1.2.1"
description = "Python client SDK and MCP stdio bridge for Auto Browser"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]
keywords = ["auto-browser", "mcp", "browser-automation", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

[project.urls]
Homepage = "https://github.com/LvcidPsyche/auto-browser"
Repository = "https://github.com/LvcidPsyche/auto-browser"
Changelog = "https://github.com/LvcidPsyche/auto-browser/blob/main/CHANGELOG.md"
Issues = "https://github.com/LvcidPsyche/auto-browser/issues"

[project.scripts]
auto-browser-mcp = "auto_browser_client.mcp_bridge:main"

[tool.setuptools.packages.find]
include = ["auto_browser_client*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
