[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-browser-controller"
version = "1.2.1"
description = "Controller API for auto-browser"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/LvcidPsyche/auto-browser"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Enforce syntax errors, unused imports, and import sorting
select = ["E9", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
warn_return_any = false
