[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-browser-langchain"
version = "1.1.1"
description = "LangChain / LangGraph / CrewAI integration for auto-browser"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.28"]

[project.urls]
Homepage = "https://github.com/LvcidPsyche/auto-browser"
